# Fractales

./: .gitignore  CMakeLists.txt  Makefile  fractales
include/: error.h  fractal.h  open_cl.h  screen_handling.h
src/: error.c  fractal.c  main  main.c  open_cl.c  screen_handling.c
